--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "rrd": "^1.0.1",
