--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "author": "Bemin Shaker",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0"
   }
 }
