--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,6 +4,6 @@
         "src": "index.js",
         "use": "@vercel/node"
     }],
-    "routes": [{"src": "/(.*)", "dest": "index.js"}],
+    "routes": [{"src": "/(.*)", "dest": "/"}],
     "rewrites": [{ "source": "/(.*)", "destination": "/api" }] 
 }
