--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,6 +4,5 @@
         "src": "index.js",
         "use": "@vercel/node"
     }],
-    "routes": [{"src": "/(.*)", "dest": "/"}],
-    "rewrites": [{ "source": "/(.*)", "destination": "/api" }] 
+    "routes": [{"src": "/(.*)", "dest": "/"}]
 }
