--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_SERVER_URL='mongodb+srv://beminshaker:Maristhigh8864!8@cluster0.mmx5kue.mongodb.net/'
+MONGO_SERVER_URL='mongodb+srv://beminshaker:Maristhigh8864!8@cluster1.mfe8s3j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1'
