chnage package manager in config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,10 @@ jobs:
       - checkout:
           path: ~/project
       - node/install-packages:
-          pkg-manager: yarn
+          pkg-manager: npm
       - run:
           name: Run tests
-          command: yarn test --passWithNoTests
+          command: npm test --passWithNoTests
   build-node:
     executor: node/default
     working_directory: ~/project/client
@@ -20,9 +20,9 @@ jobs:
       - checkout:
           path: ~/project
       - node/install-packages:
-          pkg-manager: yarn
+          pkg-manager: npm
       - run:
-          command: yarn run build
+          command: npm run build
       - run:
           name: Create the ~/artifacts directory if it doesn't exist
           command: mkdir -p ~/artifacts
